--- a/index.html
+++ b/index.html
@@ -291,6 +291,21 @@
         </section>
     </main>
 
+    <footer>
+        <h1>Develop by <span>Tymotheo Trisch</span></h1>
+        <div class="social">
+            <a href="https://www.linkedin.com/in/tymotheo-da-silva-trisch-de-oliveira-905308275/"
+            target="_blank" class="linkedin">
+                <i class='bx bxl-linkedin'></i>
+                <p>Linkedin</p>
+        </a>
+            <a href="https://github.com/TymotheoTrisch" target="_blank" class="github">
+                <i class='bx bxl-github'></i>
+                <p>GitHub</p>
+            </a>
+        </div>
+    </footer>
+
     <script src="./index.js"></script>
 </body>
 
