--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         <a href="https://hospitalregina.com.br/informacoes-uteis/doacao-de-sangue" target="_blank">
                             <h1>HEMOVIDA - Hospital Regina</h1>
                         </a>
-                        <p class="tell">(51) 3581-5241</p>
+                        <a class="tell" href="tel:+555135815241">(51) 3581-5241</a>
                         <div class="localizacao">
                             <a href="https://maps.app.goo.gl/a1yuGDywTdNPbM2G7" target="_blank">
                                 <i class='bx bx-map' style='color:#2a73c4'></i>
@@ -256,7 +256,7 @@
                             target="_blank">
                             <h1>Unidade coleta hospital Getulio Vargas</h1>
                         </a>
-                        <p class="tell">(51) 3451-8200</p>
+                        <a class="tell" href="tel:+555134518200">(51) 3451-8200</a>
                         <div class="localizacao">
                             <a href="https://maps.app.goo.gl/wtwQBxuPa2PMxmrj6" target="_blank">
                                 <i class='bx bx-map' style='color:#2a73c4'></i>
@@ -278,7 +278,7 @@
                         <a href="https://www.rs.gov.br/carta-de-servicos/servicos?servico=601" target="_blank">
                             <h1>HEMOCENTRO - Porto Alegre</h1>
                         </a>
-                        <p class="tell">(51) 3336-6755</p>
+                        <a class="tell" href="tel:+555133366755">(51) 3336-6755</a>
                         <div class="localizacao">
                             <a href="https://maps.app.goo.gl/vEKDJDPEG3E4Sqey7" target="_blank">
                                 <i class='bx bx-map' style='color:#2a73c4'></i>
@@ -294,11 +294,11 @@
     <footer>
         <h1>Develop by <span>Tymotheo Trisch</span></h1>
         <div class="social">
-            <a href="https://www.linkedin.com/in/tymotheo-da-silva-trisch-de-oliveira-905308275/"
-            target="_blank" class="linkedin">
+            <a href="https://www.linkedin.com/in/tymotheo-da-silva-trisch-de-oliveira-905308275/" target="_blank"
+                class="linkedin">
                 <i class='bx bxl-linkedin'></i>
                 <p>Linkedin</p>
-        </a>
+            </a>
             <a href="https://github.com/TymotheoTrisch" target="_blank" class="github">
                 <i class='bx bxl-github'></i>
                 <p>GitHub</p>
